Changes from jTDS 1.2.6
=======================

10/06/2012 - Holger Rehn
 o Added unit tests for bug #654 and the SQL parser bug reported in patch #115.

10/05/2012 - Holger Rehn
 o Implemented support for the COMPUTE (BY) operator (bug #678, patch #48) and
   added corresponding unit tests.

10/02/2012 - Holger Rehn
 o Corrected unit test for bug #507, the executing thread's interruption state
   hasn't been cleared, causing subsequent tests to fail.
 o Fixed bug #677, possible deadlock in JtdsStatement.close().

10/01/2012 - Holger Rehn
 o Added test for bug #677.
 o Fixed and greatly simplified SAfeTest.testCursorResultSetConcurrency0003().
 o Fixed unit test for bug #343, failing if run against SQL Server 2005.

09/28/2012 - Holger Rehn
 o Improved JUnit tests, setting server language "US-English" prevents a number
   of tests from failing.
 o Improved performance of ResultSetTest.testOutOfMemory() by about 100%.
 o Corrected JUnit test for timestamp values prior to 06/15/1940 0:00:00.
 o Fixed bug #676, error in SQL parser concerning multi line comments.
 o Fixed bug #541, data type mismatch when using {ts}/{t}/{d} JDBC escapes and
   added regression tests.
 o Added test for bug #676.
 o Improved test for bug #634.

09/27/2012 - Holger Rehn
 o PreparedStatementTest.testPrepareFailWarning() doesn't fail anymore when run
   against newer SQL Server versions or Sybase ASE.

09/26/2012 - Holger Rehn
 o Added test for bug #634.

09/25/2012 - Holger Rehn
 o Added test for bug #669.
 o Fixed StatementTest to be less strict when checking query timeout.

09/22/2012 - Holger Rehn
 o Fixed a number of incorrect error messages.
 o An attempt to execute a standard SQL statement using a CallableStatement now
   throws an appropriate SQLException on preparation instead of spurious errors
   when setting parameter values (bug #637).
 o Test for bug #637.

09/21/2012 - Holger Rehn
 o Fixed possible NPEs in JtdsObjectFactory (bug #633).