@@ -1,6 +1,10 @@
 Changes from jTDS 1.2.6
 =======================
 
+10/08/2012 - Holger Rehn
+ o Fixed bug #647, preparing a statement including a WITH clause doesn't
+   retrieve resultset meta data.
+
 10/06/2012 - Holger Rehn
  o Added unit tests for bug #654 and the SQL parser bug reported in patch #115.
 
